--- a/index.css
+++ b/index.css
@@ -90,6 +90,25 @@ input{
     transition: ease 0.5s;
 }
 
+.loading{
+    position: absolute;
+    z-index: 2;
+    width: 100%;
+    height: 250px;
+    background-color: white;
+    margin-top: -7px;
+    display: none;
+    border-radius: 5px;
+}
+
+.gif{
+    margin-left: 180px;
+}
+
+.calc:focus{
+    border: 3.5px solid rgb(153, 156, 159);
+}
+
 .kon h2{
     text-align: center;
     margin-top: 10px;
